# python-repo

./: .appveryor.yml  .appveyor.yml  .codecov.yml  .coveragerc  .deepsource.toml  .flake8  .flake8.ini  .gitignore  .gitmodules  .stickler.yml  .style.yapf  .travis.yml  LICENSE.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  house-keeping.md
.github/workflows/: Coverity-scan-ci.yml  Labeler.yml  Tests.yml  bandit.yml  codeql-analysis.yml  ossar.yml  scorecards-analysis.yml  scorecards.yml
docs/: Makefile  conf.py  index.md  toc.md  utils.py
pythonrepo/: __init__.py  pythonrepo.py
tests/: __init__.py  check_cc_lines  check_spelling  context.py  fetch-test-reporter  fetch_cc-test-reporter  profiling.py  test_basic.py  test_usage.py
