[metadata]
name = pythonrepo
version = 1.1.5
author = Mr. Walls
author_email = reactive-firewall@users.noreply.github.com
description = python-repo template
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/reactive-firewall/python-repo
download_url = https://github.com/reactive-firewall/python-repo.git
classifiers =
  Development Status :: 4 - Beta
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.14
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 2.7
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Security
license = MIT
license_files =
  LICENSE[.md]*

platform = any
project_urls =
  Bug Tracker = https://github.com/reactive-firewall/python-repo/issues
  License = https://github.com/reactive-firewall/python-repo/LICENSE.md

[bdist_rpm]
url = https://github.com/reactive-firewall/multicast.git

[bdist_wheel]
universal=1

[options]
zip_safe = true
py_modules = pythonrepo
test_suite = tests
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.* !=3.15.*
setup_requires =
  setuptools>=45.0.0
  wheel>=0.37.0
  build>=1.1.1

packages = find:


[options.packages.find]
where =
  pythonrepo/
  tests/
  *.py
include =
  pythonrepo
exclude =
  tests

[options.extras_require]
testing =
  # upstream
  pytest >= 7
  pytest-checkdocs >= 2.4
  pytest-flake8
  coverage >= 6.3
  pytest-cov >= 4.0.0; \
    # coverage seems to make PyPy extremely slow
    python_implementation != "PyPy"
  pytest-enabler >= 1.0.1
  # local
  flake8 >= 5.0
  virtualenv >= 15.0.1
  wheel >= 0.37.0
  pip >= 21.0
